# lazydev

./: .gitignore  Cargo.toml  README.md  app.js  biome.json  flake.nix  index.html  package-lock.json  package.json  rustfmt.toml  taplo.toml
backend/: .env-example  .gitignore  index.js  package-lock.json  package.json
cosmwasm/reward/nft/: Cargo.toml
cosmwasm/reward/nft/src/: contract.rs  lib.rs  msg.rs  state.rs
cosmwasm/reward/token/: Cargo.toml
cosmwasm/reward/token/src/: contract.rs  error.rs  msg.rs  state.rs
cosmwasm/src/: contract.rs  error.rs  lib.rs  models.rs  msg.rs  state.rs  utils.rs
cosmwasm/src/models/: github.rs  reclaim.rs  reward.rs
cosmwasm/ts/: .types.ts
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  flow.md  for-developers.md  for-repo-owners.md  introduction.md  rewards.md  zktls.md
docs/src/architecture/: commit-reveal-schema.md  github.md
docs/src/flow/: for-repo-owners.md
docs/src/rewards/: nft.md  token.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/api/proof-user/: route.ts
frontend/asssets/: logo.tsx
frontend/components/: AchievmentsTab.tsx  ShareProfileButton.tsx  achievments-tab.tsx  challenges-tap.tsx  contribution-chart.tsx  theme-toggle.tsx
frontend/components/contribution/: ContributionCard.tsx  contribution-card.tsx
frontend/components/dashboard/: DashboardTab.tsx  DashboardWelcome.tsx  StatsCard.tsx  dashboard-tab.tsx  dashboard-welcome.tsx  leaderboard-tab.tsx  stats-card.tsx
frontend/components/lazyDevFlow/: LazydevInteraction.tsx  lazy-dev-interaction.tsx
frontend/components/lazyDevFlow/ui/: CheckLink.tsx  complete-step.tsx  is-user-linked.tsx  minimized-status-bar.tsx  step-content.tsx  step-progress-bar.tsx
frontend/components/manageRepos/: ContractBuilder.tsx  OrganizationWelcome.tsx  RepoDetails.tsx  config-button.tsx  contract-builder.tsx  manage-repos.tsx  manageRepos.tsx  organization-welcome.tsx  repo-details.tsx  repo-list.tsx
frontend/components/manageRepos/helpers/: handle-commit-link.ts  types.ts
frontend/components/profile/: ProfileTab.tsx  profile-tab.tsx  share-profile.tsx
frontend/components/ui/: Footer.tsx  NavBar.tsx  footer.tsx  navbar.tsx
frontend/providers/: SessionProvider.tsx  kepler-context.tsx  session-provider.tsx
frontend/ts/lazydev/: Lazydev.client.ts  Lazydev.types.ts
frontend/ts/lazydev-token-reward/: LazydevTokenReward.client.ts  LazydevTokenReward.types.ts
frontend/utils/: auth.ts  balance-fetch.ts  chain-info.ts  check-github-link.ts  claim-all-rewards.ts  claim-reward-helper.ts  consts.ts  filtered-repos.ts  get-admin-repos.ts  get-repo-details.tsx  github-contributions.ts  lazydev-helpers.ts  transaction-helpers.ts
frontend/utils/manage-repos/: link-commit-repo.ts  local-built-contracts.ts  repoHelpers.ts
schema/: lazydev-token-reward.json  lazydev.json
schema/raw/: execute.json  instantiate.json  migrate.json  query.json  response_to_query_pr_eligibility.json  response_to_repo_config.json  response_to_repos.json  response_to_rewards.json
