[workspace]
members = [".", "cosmwasm/reward/token"]

[workspace.dependencies]
cosmwasm-schema = "2.2.1"
cosmwasm-std    = "2.2.1"
cw-storage-plus = "2.0.0"
hex             = "0.4.3"
serde           = { version = "1.0.189", default-features = false, features = ["derive", "alloc"] }
serde-json-wasm = "0.2.1"
sha2            = "0.10.8"
thiserror       = { version = "1.0.49" }

# local deps
lazydev = { path = "." }

[package]
name    = "lazydev"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path       = "cosmwasm/src/lib.rs"

[[bin]]
name = "schema"
path = "cosmwasm/src/bin/schema.rs"

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = "fat"
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["iterator"] }
cw-storage-plus = { workspace = true }
hex             = { workspace = true }
serde           = { workspace = true }
serde-json-wasm = { workspace = true }
sha2            = { workspace = true }
thiserror       = { workspace = true }

[features]
default = []

library = []
